# testing

./: .gitignore  README.md
c_tut/: CMakeLists.txt
c_tut/src/: argc-argv.c  array-arg.c  array-ptr.c  array.c  file.c  functions.c  hello.c  if-then-else.c  mem-alloc.c  pointer.c  ptr-arg-2.c  ptr-arg-3.c  ptr-arg.c  ptr-func.c  ptr-problems.c  ref-arg.c  strings.c  struct.c  type-conv.c  types.c
personnel_linked_list_database/: CMakeLists.txt  in.txt
personnel_linked_list_database/src/: list.c  list.h  main.c  person.c  person.h
processor/: CMakeLists.txt
processor/src/: processor.c  processor.h  processor_test.c
